# coffee-shop

./: Dockerfile  db.sqlite3  pyproject.toml
coffee_shop/: settings.py  urls.py
core/: admin.py  forms.py  models.py  urls.py  views.py
core/migrations/: 0002_alter_cart_options_alter_drinks_options_and_more.py
core/static/: style.css
core/static/menu/: cart.css  menu.css  specified-item.css
templates/: after_payment.html  base.html  cart.html  menu-content-specified.html  menu-content.html  menu-menu.html  menu-sidenav.html  specified-item.html  user_login.html  user_registration.html
